# testCmake

./: CMakeLists.txt  CMakeLists.txt~  README.md  main.cpp  main.cpp~
include/: hello.h~
lib/: CMakeLists.txt  CMakeLists.txt~  hello.cpp  hello.cpp~
tools/: printHello.py
